# GLFWCmakeSample

./: CMakeLists.txt  README.md
resources/: point.frag  point.vert
src/: Material.h  Matrix.h  Object.h  Shape.h  ShapeIndex.h  SolidShape.h  SolidShapeIndex.h  Uniform.h  Vector.h  Window.h  main.cpp
